--- a/bus_route/templates/main_dashboard.html
+++ b/bus_route/templates/main_dashboard.html
@@ -428,6 +428,22 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- Main Office Portal Card -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <div class="feature-icon">
+                            <i class="bi bi-building"></i>
+                        </div>
+                        <h5 class="card-title">Main Office Portal</h5>
+                        <p class="card-text"></p>
+                        <a href="{% url 'main_office:dashboard' %}" class="btn btn-primary">
+                            <i class="bi bi-gear"></i> Access Portal
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
