--- a/login_app/templates/login_app/dashboard.html
+++ b/login_app/templates/login_app/dashboard.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col text-end">
                     {% if user.is_authenticated %}
-                        <a href="{% url 'logout' %}" class="btn btn-sm btn-outline-light">Logout</a>
+                        <a href="{% url 'login_app:logout' %}" class="btn btn-sm btn-outline-light">Logout</a>
                     {% endif %}
                 </div>
             </div>
@@ -41,9 +41,9 @@
     <nav class="nav-menu">
         <div class="container">
             <ul>
-                <li><a href="{% url 'main_home' %}">Home</a></li>
+                <li><a href="{% url 'login_app:main_home' %}">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="{% url 'dashboard' %}" class="active">Dashboard</a></li>
+                <li><a href="{% url 'login_app:dashboard' %}" class="active">Dashboard</a></li>
             </ul>
         </div>
     </nav>
